XO_Project_UAT/Project--XOGrp--UAT/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Asset Collection</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Materials in</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Proof Out</fullName>
        </values>
        <values>
            <fullName>Renewal Follow Up</fullName>
        </values>
        <values>
            <fullName>Vendor Contacted</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CB Inbound</fullName>
        <description>CSP-2783</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated to Manager</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on AS</fullName>
        </values>
        <values>
            <fullName>Waiting on Customers</fullName>
        </values>
        <values>
            <fullName>Waiting on Rep</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Cancels</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Callback Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending 2nd Call</fullName>
        </values>
        <values>
            <fullName>Pending 3rd Call</fullName>
        </values>
        <values>
            <fullName>Pending 4th Call</fullName>
        </values>
        <values>
            <fullName>Pending 5th Call</fullName>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Waiting for AE</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Manager</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Client Billing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>1-15 Days Past Due</fullName>
        </values>
        <values>
            <fullName>16-30 Days Past Due</fullName>
        </values>
        <values>
            <fullName>31-45 Days Past Due</fullName>
        </values>
        <values>
            <fullName>46-60 Days Past Due</fullName>
        </values>
        <values>
            <fullName>61-75 Days Past Due</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated to Manager</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Payment Plan</fullName>
        </values>
        <values>
            <fullName>Promise To Pay</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on AS</fullName>
        </values>
        <values>
            <fullName>Waiting on Account Manager</fullName>
        </values>
        <values>
            <fullName>Waiting on Loyalty Manager</fullName>
        </values>
        <values>
            <fullName>Waiting on RBS</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In House Collections</fullName>
        <description>CSP-2612</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Good Faith Payment</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Commitment</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Payment Plan</fullName>
        </values>
        <values>
            <fullName>Promise To Pay</fullName>
        </values>
        <values>
            <fullName>Waiting for AE</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Manager</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inbound</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for AE</fullName>
        </values>
        <values>
            <fullName>Waiting for Customer</fullName>
        </values>
        <values>
            <fullName>Waiting for Manager</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Onboarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Attempts In Progress</fullName>
        </values>
        <values>
            <fullName>Call Rescheduled</fullName>
        </values>
        <values>
            <fullName>Call Scheduled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Completed</fullName>
        </values>
        <values>
            <fullName>Closed Customer Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Declined</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed No Show</fullName>
        </values>
        <values>
            <fullName>Customer Cancelled</fullName>
        </values>
        <values>
            <fullName>Customer No Show</fullName>
        </values>
        <values>
            <fullName>Max Attempts</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Rep Billing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>Escalated to Manager</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on AS</fullName>
        </values>
        <values>
            <fullName>Waiting on Customers</fullName>
        </values>
        <values>
            <fullName>Waiting on Rep</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Reviews</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Waiting on Documentation from Reviewer</fullName>
        </values>
        <values>
            <fullName>Waiting on Documentation from Vendor</fullName>
        </values>
        <values>
            <fullName>Waiting on Edit</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Voicemail</fullName>
        <description>These are the steps that will be needed for voicemails</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AC_Case_Product_Type__c</fullName>
        <formula>IF( ISPICKVAL(Product_Type__c, &apos;Direct Mail&apos;) ,
   &quot;Email&quot;,
   If(OR( 
         Asset_Collection_Product_Name__c = &apos;Spotlight Banner&apos;,
         Asset_Collection_Product_Name__c = &apos;Buzz Badge&apos;,
         Asset_Collection_Product_Name__c = &apos;Premium Banner Program&apos;,
         Asset_Collection_Product_Name__c = &apos;Local Home Page Badge&apos;,
         Asset_Collection_Product_Name__c = &apos;Best of Weddings-Knot Spotlight Banner&apos;),
      &quot;Special&quot;,
      &quot;Normal&quot;
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AC Case Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manual_VIP_Program_Status__c</fullName>
        <formula>TEXT(Account.Manual_VIP_Program_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manual VIP Program Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Close__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2806 save Account owner at the close of the case</description>
        <label>Account Owner(Close)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName + &apos; &apos; + Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Past_Due_Balance__c</fullName>
        <description>SS-5159. Looks up to the account object for the value</description>
        <formula>Account.Past_Due_Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Past Due Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_SS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account SS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account.Account_Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_TCV__c</fullName>
        <description>This field is used to store the Account TCV on Case object when insert Case or update Case assignment since there is not track history for TCV on Account.</description>
        <label>Account TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_VIP_Program__c</fullName>
        <formula>Account.VIP_Program__c</formula>
        <label>Account VIP Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amnesty_Promotion_Banner__c</fullName>
        <formula>IF( text(Account.Amnesty_Promotion__c
)==&apos;100% Amnesty Eligible&apos;, 
IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002M8N9&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600), 
  IF (text(Account.Amnesty_Promotion__c
)==&apos;50% Amnesty Eligible&apos;, 
    IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002M8N5&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600), 
&apos;&apos;)
)</formula>
        <label>Amnesty Promotion Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Collection_Product_Name__c</fullName>
        <label>Asset Collection Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <label>Attempts</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audited_By_Reviews_Team__c</fullName>
        <description>SS-4256</description>
        <label>Audited By Reviews Team</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audited_By__c</fullName>
        <description>SS-4256</description>
        <label>Audited By</label>
        <picklist>
            <controllingField>Audited_By_Reviews_Team__c</controllingField>
            <picklistValues>
                <fullName>Wilbert Allen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linzi Plummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keri Sowerby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benjamin Francois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rhianna Reed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan DeaKyne</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Reply_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if this field checked, we should auto reply the email for review case,
if unchecked, we must not reply.</description>
        <label>Auto Reply Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <formula>IF(Account.Cancel_For_Convenience__c == true,
IMAGE(&quot;https://xogrp--c.na55.content.force.com/servlet/servlet.ImageServer?id=015f1000002bVJt&amp;oid=00Dj0000000KVB8&quot;,&quot;Cancel for Convenience&quot;,20,600),  
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BetaOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Beta Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Object_Identifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the GUID from New Voice Media that will allow the NVM Embedded Player to find and play the recording.</description>
        <externalId>true</externalId>
        <inlineHelpText>This GUID relates to the record in NVM</inlineHelpText>
        <label>Call Object Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Case_Type__c</fullName>
        <description>CSP-2806 Mark Cancel Cases as BoB versus Service</description>
        <label>Cancel Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>BoB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Drilldown__c</fullName>
        <label>Cancel Reason Drilldown</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Lead Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Length/Auto-Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Appropriate for The Knot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Product/Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More affordable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Leads/Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overbooked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No longer in the Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Quality/Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Market/Category not Appropriate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Reason Given</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason_Notes__c</fullName>
        <label>Cancel Reason Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Card_Declined__c</fullName>
        <formula>Account.Card_Declined__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseOwnerSalesRepIDClose__c</fullName>
        <formula>Case_Owner_Close__r.SalesRepID__c</formula>
        <label>Case Owner SalesRep ID(Close)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CSP-2806 the case has been closed flag</description>
        <label>Case Closed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Current_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Current Owner(User)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Close__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-2806 save Case owner at the close of the case</description>
        <label>Case Owner(Close)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager_Email__c</fullName>
        <formula>Owner:User.Manager.Email</formula>
        <label>Case Owner Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager_Name__c</fullName>
        <formula>Owner:User.Manager.FirstName + &apos; &apos; + Owner:User.Manager.LastName</formula>
        <label>Case Owner Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Profile_Name__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <label>Case Owner Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <label>Case Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Queue_Close__c</fullName>
        <description>CSP-2806 Mark Cancel Cases as BoB versus Service</description>
        <label>Case Queue(Close)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason_Drilldown__c</fullName>
        <label>Case Reason Drilldown</label>
        <picklist>
            <controllingField>Reason</controllingField>
            <picklistValues>
                <fullName>Did Not Book/Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not Recognize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harassment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inappropriate Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shutterfly Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to remove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Inquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Related_to_Child_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate when a case is related specifically to a child account</description>
        <label>Case Related to Child Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Notes__c</fullName>
        <label>Close Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_of_Contact_Phone__c</fullName>
        <description>This field is being used by New Voice Media to match incoming calls to cases, contact phone is a formula field that is not able to be used by New Voice Media. It will be filled in via a workflow that checks if the value has been updated in Contact Phone and then fill in the data into this field. SS-4187</description>
        <label>Copy of Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <description>Creating for ticket SS-5562. To be used for NVM when a Case is created by NVM to fill in the phone number of the caller.</description>
        <inlineHelpText>This phone number will be filled in by NVM when they create a case. This phone number will often be the same as the contact phone but if there is no matching contact this field will give you a view into what phone number the call originated from.</inlineHelpText>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>TEXT(Account.Customer_Type__c)</formula>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DE_Recent_Case_Routing_Asset_Collection__c</fullName>
        <formula>AND( 
RecordType.Name = &apos;Asset Collection&apos;, 
ISBLANK(Owner:Queue.Id), 
NOT(ISBLANK(Owner:User.Id)), 
Owner:User.IsActive, 
NOT(IsClosed) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DE Recent Case Routing(Asset Collection)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Recent_Case_Routing_Inbound__c</fullName>
        <formula>AND( 
RecordType.Name = &apos;Inbound&apos;, 
ISBLANK(Owner:Queue.Id), 
NOT(ISBLANK(Owner:User.Id)), 
Owner:User.IsActive, 
NOT(IsClosed) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DE Recent Case Routing(Inbound)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Recent_Case_Routing_Onboarding__c</fullName>
        <formula>AND( 
RecordType.Name = &apos;2 - Onboarding&apos;, 
ISBLANK(Owner:Queue.Id), 
NOT(ISBLANK(Owner:User.Id)), 
Owner:User.IsActive, 
NOT(IsClosed) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DE Recent Case Routing(Onboarding)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DE_Routing_Status__c</fullName>
        <formula>IF( AC_Case_Product_Type__c = &apos;Normal&apos;,
	IF(NOT(ISBLANK(Onboarding_Case__c)),
		IF(Onboarding_Case__r.IsClosed = TRUE,
			&apos;Closed&apos;,
			IF(ISBLANK(Onboarding_Case__r.Owner:User.Id),
				&apos;Hold&apos;,
				&apos;Open&apos;
			)
		),
		IF(Opportunity__r.Onboarding_Required__c = True,
			&apos;Hold&apos;,
			&apos;Closed&apos;
		)
	),
	&apos;Closed&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Onboarding Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_Request_Received__c</fullName>
        <description>Indicate the date that the original request was sent from the customer by an AE/SS/CBSS</description>
        <label>Date and Time Request Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_Custom__c</fullName>
        <description>Move the description data</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Display_ID__c</fullName>
        <label>Display ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount_Saved__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Dollar amount saved (in contract)</description>
        <label>Dollar Amount Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>CSP-3150</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicated_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter the case this case was a duplicate of</description>
        <label>Duplicated Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Duplicated Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailAttempts__c</fullName>
        <label>Email Attempts</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Closed_Date__c</fullName>
        <description>CSP-2806 Get stamped first closed date time</description>
        <label>First Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Attempts__c</fullName>
        <label>Follow Up Attempts</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>SS-4038</description>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InBusinessSince__c</fullName>
        <description>Copy from field In Business Since on Account(CSP-2671)</description>
        <label>In Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Onboarding_Email_Automated__c</fullName>
        <formula>IF(
  VIP_Onboarding_Case__c,
  AND(
    $Setup.Onboarding_Email_Automation_Setting__c.Is_VIP_Email_Automated__c,
    NOT(Send_Onboarding_Email_Manually__c)
  ),
  AND(
    $Setup.Onboarding_Email_Automation_Setting__c.Is_General_Email_Automated__c,
    NOT(Send_Onboarding_Email_Manually__c)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Onboarding Email Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LDE_Launch_Date__c</fullName>
        <description>Lists the launch date for the LDE; if not LDE value is null</description>
        <label>LDE Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Service__c</fullName>
        <description>If canceling or &quot;saved for non-renewal&quot; enter last date of service</description>
        <label>Last Date of Service</label>
        <type>Date</type>
    </fields>
</CustomObject>